# rust-proc-macro-workshop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  toc.md
.claude/skills/review-chapter/: SKILL.md
.github/workflows/: site.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/00_intro/: 00_welcome.md
book/src/01_intro/: 00_welcome.md
book/src/01_introduction/: 01_cargo_expand.md  02_thiserror.md  03_macros_vs_functions.md  05_when_to_use.md
book/src/02_basics/: 00_overview.md  03_what_a_proc_macro_returns.md  05_token_and_tokenstream.md  09_trybuild.md
book/src/02_introduction/: 00_overview.md  01_cargo_expand.md  02_thiserror.md  03_macros_vs_functions.md  04_declarative_vs_procedural.md  05_when_to_use.md
book/src/03_basics/: 00_overview.md  01_crate_structure.md  02_re_export_pattern.md  03_minimal_derive.md  04_minimal_derive.md  05_proc_macro2.md  05_token_and_tokenstream.md  06_syn.md  07_quote.md  08_quote.md  08_re_export_pattern.md  09_trybuild.md
book/src/03_derive/: 00_overview.md  01_struct_fields.md  03_absolute_paths.md  04_name_clashes.md  08_trybuild_errors.md  09_container_attributes.md  10_field_attributes.md
book/src/04_derive/: 00_overview.md  01_struct_fields.md  02_enums.md  03_absolute_paths.md  04_name_clashes.md  05_panic_vs_compile_error.md  06_syn_error.md  07_spans.md  08_trybuild_errors.md  11_darling.md  12_generics.md  13_builder.md
book/src/04_function_like/: 00_overview.md  (+4 more)
exercises/03_basics/05_proc_macro2/: Cargo.toml
exercises/03_basics/05_proc_macro2/src/: lib.rs
helpers/: Cargo.toml
(+318 files in other folders)
