[workspace]
members = [
  "exercises/*/*",
  "helpers",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
darling = "0.20"
helpers = { path = "helpers" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
trybuild = "1"
