[package]
name = "proc-macro2-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
# `extra-traits` provides `Debug` for `syn` types, needed by the `assert_matches!`
# test on `syn::Item` below.
syn = { workspace = true, features = ["extra-traits"] }
